--- a/Proyecto_EDD/nbproject/project.properties
+++ b/Proyecto_EDD/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto_EDD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gs-core-1.3-javadoc.jar=gs-core-1.3\\gs-core-1.3-javadoc.jar
+file.reference.gs-core-1.3-sources.jar=gs-core-1.3\\gs-core-1.3-sources.jar
+file.reference.gs-core-1.3.jar=gs-core-1.3\\gs-core-1.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gs-core-1.3-javadoc.jar}:\
+    ${file.reference.gs-core-1.3-sources.jar}:\
+    ${file.reference.gs-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
