--- a/Proyecto_EDD/nbproject/project.properties
+++ b/Proyecto_EDD/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyecto_edd.Proyecto_EDD
+main.class=proyecto_edd.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
